<resources>
    <string name="app_name">Hablemos</string>

    <!-- Parámetros -->
    <string name="accessToken">3d0b0b12561c4040963f4e4f529527c7</string>
    <string name="horarioManiana">6</string>
    <string name="horarioTarde">12</string>
    <string name="horarioNoche">20</string>
    <string name="horasClima">2</string>
    <string name="mail">hablemosproyectofinal@gmail.com</string>
    <string name="pass">aprobamoscomosea</string>
    <string name="urlImagenReporte">https://i.postimg.cc/MpTs8h49/hablemos-320x240-fenix.png</string>
    <string name="horarioReporte">9</string>

    <!-- Firebase -->
    <string name="fbRecordatoriosPresion">recordatoriosPresion</string>
    <string name="fbRecordatoriosGlucosa">recordatorioglucosa</string>
    <string name="fbUsuarios">users</string>
    <string name="rbInteracciones">interacciones</string>

    <!-- Clima -->
    <string name="horarioClima">13</string>

    <!-- Salud -->
    <string name="horarioSaludManiana">10</string>
    <string name="horarioSaludTarde">16</string>
    <string name="horarioSaludNoche">21</string>

    <!-- JustifyTextView -->
    <string name="justificarTextoDesde">50</string>
    <string name="escalarLineaDesde">15</string>
    <string name="completarLineaHasta">20</string>

    <string name="action_settings">Settings</string>
    <string name="non_empty_query">No se ha ingresado un texto</string>
    <string name="escuchando">Escuchando…</string>
    <string name="permisoGrabarDenegado">El permiso para grabar audio es necesario para usar la función Hablar</string>
    <string name="saludoManiana">Buenos días</string>
    <string name="saludoTarde">Buenas tardes</string>
    <string name="saludoNoche">Buenas noches</string>
    <string name="errorSpeechRecog">Speech recognition engine error</string>
    <string name="saludoFinal">¡Hasta la proxima!</string>


    <string name="errorReconVoz">No se pudo reconocer la entrada de voz</string>
    <string name="tagMain">MainActivity</string>
    <string name="nombreReporte">reporteDiario.txt</string>
    <string name="remitente">Hablemos!</string>
    <string name="coloca_tu_email">Coloca tu Email</string>
    <string name="coloca_tu_contrasenia">Coloca tu Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tenes_usuario_registrate_ahora">¿No tenes usuario? Registrate ahora</string>
    <string name="contrasenia_view">Contraseña</string>
    <string name="email_view">Email</string>
    <string name="logo_login">Login</string>
    <string name="escribi_aca">ESCRIBIR ACA</string>
    <string name="enviar_view">ENVIAR</string>
    <string name="hablar_view">HABLAR</string>
    <string name="limpiar_view">Limpiar</string>
    <string name="mensaje_anterior">Mensaje Anterior</string>
    <string name="limpiar_historial">Borrar Historial</string>
    <string name="ir_al_registro">ir al registro</string>
    <string name="ir_al_login">ir al login</string>
    <string name="tagLogin">Admin_Log</string>
    <string name="fallo_autenticacion">No pudimos autenticarte. ¡Hacelo de nuevo!</string>
    <string name="minimum_password">Minimo de 6 caracteres</string>
    <string name="tagRegistro">RegistroActivity</string>
    <string name="imagen_mensaje">imagenMensaje</string>
    <string name="mensajeicono">mensajeIcono</string>
    <string name="escribi_algo_aca">Escribi algo aca</string>
    <string name="mensaje_actual">LOS MENSAJES VAN ACA</string>
    <string name="imagenregistro">imagenRegistro</string>
    <string name="registrar">Registrar</string>
    <string name="nombre_abuelo">Nombre Usuario</string>
    <string name="email_del_tutor">Email del tutor</string>
    <string name="contrase_a_tutor">Contraseña tutor</string>
    <string name="repetir_pwd">Repetir Contraseña</string>
    <string name="equipo_futbol">Equipo fútbol</string>
    <string name="medicamentos_turno_ma_ana">Medicamentos Mañana</string>
    <string name="medicamentos_turno_tarde">Medicamentos Tarde</string>
    <string name="medicamentos_turno_noche">Medicamentos Noche</string>
    <string name="imgusericon">imgUserIcon</string>
    <string name="imgpassicon">imgPassIcon</string>
    <string name="imgpassicon2">imgPassIcon2</string>
    <string name="imgpassicon3">imgPassIcon3</string>
    <string name="imgturnomaniana">imgTurnoManiana</string>
    <string name="imgturnotarde">imgTurnoTarde</string>
    <string name="imgturnonoche">imgTurnoNoche</string>
    <string name="glucosa">Recordatorios Glucosa (No obligatorio)</string>
    <string name="medicamentos">Recordatorios Medicamentos</string>
    <string name="ma_ana">Mañana</string>
    <string name="lunes_vista">L</string>
    <string name="martes_vista">Ma</string>
    <string name="miercoles_vista">Mi</string>
    <string name="jueves_vista">J</string>
    <string name="viernes_vista">V</string>
    <string name="sabado_vista">S</string>
    <string name="domingo_vista">D</string>
    <string name="tarde">Tarde</string>
    <string name="noche">Noche</string>
    <string name="presion_vista">Recordatorios Presion (No obligatorio)</string>
    <string name="lblEquipo">Equipo</string>

    <!-- Validaciones registro -->
    <string name="regexEmail">[a\u002DzA\u002DZ0\u002D9\._]{3,30}@([a\u002DzA\u002DZ]{3,10}\.[a\u002DzA\u002DZ]{2,10})[\.[a\u002DzA\u002DZ]{2,10}]*</string>
    <string name="regexPassword">[a\u002DzA\u002DZ0\u002D9]{6,30}</string>
    <string name="nombreAbueloVacio">El nombre no puede estar vacío</string>
    <string name="emailVacio">El email no puede estar vacío</string>
    <string name="emailMalFormado">El email ingresado no es correcto</string>
    <string name="contraseniaVacia">La contraseña no puede estar vacía</string>
    <string name="contraseniasNoCoinciden">Las contraseñas no coinciden</string>
    <string name="contraseniaMalFormada">La contraseña ingresada no esta correctamente formada</string>
    <string name="equipoVacio">El equipo de fútbol no puede estar vacío</string>

    <!-- Nombre interacciones -->
    <string name="interaccionTitulo_AbrirApp">Abrir Hablemos!</string>
    <string name="interaccionTitulo_Notificacion">Notificación de %1$s</string>
    <string name="interaccionTitulo_RevisionSalud">Revisión de %1$s</string>

    <!-- Texto interacciones -->
    <string name="interaccionTexto_EnviarNotificacion">Se envió la notificación</string>
    <string name="interaccionTexto_Notificacion">El usuario %1$s la notificación de %2$s</string>
    <string name="interaccionTexto_VencerNotificacion">El usuario no abrió la notificación de %1$s a tiempo</string>
    <string name="interaccionTexto_SaludRevisionSi">El usuario confirmó que se hizo el chequeo de %1$s. Resultado: %2$s</string>
    <string name="interaccionTexto_SaludRevisionNo">El usuario dijo que no se hizo el chequeo de %1$s. Su motivo fue: %2$s</string>
    <string name="interaccionTexto_SaludRevisionNi">La respuesta del usuario sobre su chequeo de %1$s fue: %2$s</string>

    <!-- Notificaciones -->
    <string name="notificacionTexto_Salud">Tocá una vez acá para saber cuáles.</string>
    <string name="notificacionTitulo_Clima">Qué lindo día</string>
    <string name="notificacionTexto_Clima">¿Querés salir a pasear?</string>
    <string name="notificacionTitulo_Chequeo">Revisión de %1$s de la %2$s</string>
    <string name="notificacionTexto_Chequeo">¡Tocá una vez acá para avisarme cuando lo hagas!</string>

    <string name="cancelar">Cancelar</string>
    <string name="notificacionAvisoMail">Ya le mandé el reporte a tu tutor. Saludos!!</string>
    <string name="el_mensaje_va_aca">EL MENSAJE VA ACA</string>

    <string name="configurar">configurar</string>
    <string name="la_pregunta_hecha">LA PREGUNTA HECHA</string>
    <string name="graciasAvisoRevision">¡Gracias por avisarme!</string>
    <string name="climaApiKey">ea574594b9d36ab688642d5fbeab847e</string>
    <string name="bullet">►</string>
</resources>
