<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/textQuery"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/escribi_aca"
            android:background="@android:color/white"
            android:inputType="text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="128dp"
                android:text="@string/enviar_view" />

            <Button
                android:id="@+id/micButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="micButtonOnClick"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="7dp"
                android:text="@string/hablar_view" />


            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="0dp"
                android:text="@string/limpiar_view" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- ACA ESCRIBE EL MENSAJE ANTERIOR-->
            <TextView
                android:id="@+id/resultTextViewAnterior"
                android:layout_width="match_parent"
                android:hint="@string/mensaje_anterior"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/buttonClearHistorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="66dp"
                android:text="@string/limpiar_historial" />

            <Button
                android:id="@+id/buttonRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="66dp"
                android:text="@string/ir_al_registro"
                android:onClick="abrirVentanaRegistro"
                />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="66dp"
                android:text="@string/ir_al_login"
                android:onClick="abrirVentanaLogin"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>