<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/textQuery"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/escribi_aca"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="52sp"
            android:singleLine="true"
            android:imeOptions="actionSend"
                       />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textColorHint="@color/black"
            android:hint="@string/enviar_view"
            android:textSize="50sp"
            android:background="@color/nuevo"
            android:textStyle="bold"
              />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        >
    <Button
        android:id="@+id/micButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/hablar_view"
        android:textSize="50sp"
        android:background="@color/nuevo"
        android:textStyle="bold"
        android:onClick="micButtonOnClick"
        android:textColorHint="@color/black"
         />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp">

        <TextView
            android:id="@+id/resultTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/la_pregunta_hecha"
            android:textStyle="bold"
            android:textSize="30sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:id="@+id/ulti">

        <app.hablemos.view.JustifyTextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/el_mensaje_va_aca"
            android:textStyle="bold"
            android:textSize="30sp"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:padding="20dp"
        android:layout_below="@+id/ulti">

        <TextView
            android:id="@+id/city_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/updated_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/city_field"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="13sp" />
        <TextView
            android:id="@+id/selectCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change City"
            android:textStyle="italic"
            android:textSize="11dp"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/updated_field"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="90sp"
            />

        <TextView
            android:id="@+id/current_temperature_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/details_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weather_icon"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView
            android:id="@+id/humidity_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_field"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView
            android:id="@+id/pressure_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/humidity_field"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>

</ScrollView>